--- a/Alert/app/src/main/res/layout/content_create_apa.xml
+++ b/Alert/app/src/main/res/layout/content_create_apa.xml
@@ -74,19 +74,28 @@
             android:padding="0dp"
             android:focusable="false"/>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_money_black_24px"/>
         <EditText
             android:id="@+id/etBudget"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="@dimen/space_16"
             android:layout_marginRight="@dimen/space_16"
             android:backgroundTint="@android:color/transparent"
-            android:drawableLeft="@drawable/ic_money_black_24px"
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="@string/txt_budget"
             android:inputType="number"
             android:padding="0dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
