--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -105,7 +105,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_horizontal_margin_half"
                 android:paddingBottom="@dimen/activity_vertical_margin_half"
-                android:background="@color/divider_color_lighter"
+                android:background="@android:color/transparent"
                 android:textColor="@color/grey_title"
                 android:textStyle="bold"
                 android:textSize="12sp"
