--- a/Alert/app/src/main/res/layout/content_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/content_alert_detail.xml
@@ -1,171 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imgHazardIcon"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="31dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/bg_circle"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/textViewRisk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Risk:"
-            android:textColor="@color/gray_title"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imgHazardIcon"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/txtHazardName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="1dp"
-            android:text="Hazard Name"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/imgHazardIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRisk"
-            android:layout_marginLeft="16dp" />
-
-        <ImageView
-            android:id="@+id/imgPopulationIcon"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgHazardIcon"
-            app:srcCompat="@drawable/bg_circle"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/textViewPopulation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:text="Population affected:"
-            android:textColor="@color/gray_title"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imgPopulationIcon"
-            app:layout_constraintTop_toBottomOf="@+id/txtHazardName"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/txtPopulationAffected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="1dp"
-            android:text="100,000 people"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/imgPopulationIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewPopulation"
-            android:layout_marginLeft="16dp" />
-
-        <ImageView
-            android:id="@+id/imgAreaIcon"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgPopulationIcon"
-            app:srcCompat="@drawable/bg_circle"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/textViewAreas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:text="Affected areas:"
-            android:textColor="@color/gray_title"
-            android:textSize="13sp"
-            app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-            app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/txtArea"
-            android:lineSpacingMultiplier="1.6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin_half"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAreas"
-            android:layout_marginLeft="16dp" />
-
-        <ImageView
-            android:id="@+id/imgInfo"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textViewInfo"
-            app:srcCompat="@drawable/bg_circle"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/textViewInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/info_and_notes"
-            android:textColor="@color/gray_title"
-            android:textSize="13sp"
-            app:layout_constraintStart_toEndOf="@+id/imgInfo"
-            app:layout_constraintTop_toBottomOf="@+id/txtArea"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:id="@+id/txtInfo"
-            android:layout_width="275dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="1dp"
-            android:text="@string/text_info"
-            android:textColor="@android:color/black"
-            android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/imgInfo"
-            app:layout_constraintTop_toBottomOf="@+id/textViewInfo"
-            android:layout_marginLeft="16dp" />
-
-    </android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_alignParentLeft="true"
+        android:id="@+id/imgHazardIcon"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="31dp"
+        app:srcCompat="@drawable/bg_circle" />
 
     <TextView
+        android:layout_alignTop="@+id/imgHazardIcon"
+        android:layout_toRightOf="@+id/imgHazardIcon"
+        android:id="@+id/textViewRisk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Risk:"
+        android:textColor="@color/gray_title"
+        android:textSize="13sp"/>
+
+    <TextView
+        android:layout_below="@+id/textViewRisk"
+        android:layout_toRightOf="@+id/imgHazardIcon"
+        android:id="@+id/txtHazardName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="1dp"
+        android:text="Hazard Name"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <ImageView
+        android:layout_below="@+id/txtHazardName"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/imgPopulationIcon"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:srcCompat="@drawable/bg_circle" />
+
+    <TextView
+        android:layout_alignTop="@+id/imgPopulationIcon"
+        android:layout_toRightOf="@+id/imgPopulationIcon"
+        android:id="@+id/textViewPopulation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Population affected:"
+        android:textColor="@color/gray_title"
+        android:textSize="13sp"/>
+
+    <TextView
+        android:layout_toRightOf="@+id/imgPopulationIcon"
+        android:layout_below="@+id/textViewPopulation"
+        android:id="@+id/txtPopulationAffected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="1dp"
+        android:text="100,000 people"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <ImageView
+        android:layout_below="@+id/txtPopulationAffected"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/imgInfo"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewInfo"
+        app:srcCompat="@drawable/bg_circle" />
+
+    <TextView
+        android:layout_toRightOf="@+id/imgInfo"
+        android:layout_alignTop="@+id/imgInfo"
+        android:id="@+id/textViewInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/info_and_notes"
+        android:textColor="@color/gray_title"
+        android:textSize="13sp"
+        app:layout_constraintStart_toEndOf="@+id/imgInfo"
+        app:layout_constraintTop_toBottomOf="@+id/txtArea" />
+
+    <TextView
+        android:layout_below="@+id/textViewInfo"
+        android:layout_toRightOf="@+id/imgInfo"
+        android:id="@+id/txtInfo"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="1dp"
+        android:text="@string/text_info"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <ImageView
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/txtInfo"
+        android:id="@+id/redAlertReasonIcon"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:srcCompat="@drawable/alert_red_reason" />
+
+    <TextView
+        android:layout_toRightOf="@+id/redAlertReasonIcon"
+        android:layout_alignTop="@+id/redAlertReasonIcon"
+        android:id="@+id/redAlertReason"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Red alert reason:"
+        android:textColor="@color/gray_title"
+        android:textSize="13sp" />
+
+    <TextView
+        android:layout_toRightOf="@+id/redAlertReasonIcon"
+        android:layout_below="@+id/redAlertReason"
+        android:id="@+id/redAlertReasonTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_half"
+        android:lineSpacingMultiplier="1.6"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <ImageView
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/redAlertReason"
+        android:id="@+id/imgAreaIcon"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="42dp"
+        app:srcCompat="@drawable/bg_circle" />
+
+    <TextView
+        android:layout_toRightOf="@+id/imgAreaIcon"
+        android:layout_alignTop="@+id/imgAreaIcon"
+        android:id="@+id/textViewAreas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Affected areas:"
+        android:textColor="@color/gray_title"
+        android:textSize="13sp"
+        app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
+        app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected" />
+
+    <TextView
+        android:layout_toRightOf="@+id/imgAreaIcon"
+        android:layout_below="@+id/textViewAreas"
+        android:id="@+id/txtArea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_half"
+        android:lineSpacingMultiplier="1.6"
+        android:textColor="@android:color/black"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAreas" />
+
+    <TextView
+        android:layout_alignParentBottom="true"
         android:id="@+id/txtLastUpdated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -179,4 +208,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
