--- a/Alert/app/src/main/res/layout/content_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/content_alert_detail.xml
@@ -1,212 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/imgHazardIcon"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="31dp"
+            app:srcCompat="@drawable/bg_circle" />
 
+        <TextView
+            android:layout_alignTop="@+id/imgHazardIcon"
+            android:layout_toRightOf="@+id/imgHazardIcon"
+            android:id="@+id/textViewRisk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="Risk:"
+            android:textColor="@color/gray_title"
+            android:textSize="13sp"/>
 
-    <ImageView
-        android:layout_alignParentLeft="true"
-        android:id="@+id/imgHazardIcon"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="31dp"
-        app:srcCompat="@drawable/bg_circle" />
+        <TextView
+            android:layout_below="@+id/textViewRisk"
+            android:layout_toRightOf="@+id/imgHazardIcon"
+            android:id="@+id/txtHazardName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="1dp"
+            android:text="Hazard Name"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
-    <TextView
-        android:layout_alignTop="@+id/imgHazardIcon"
-        android:layout_toRightOf="@+id/imgHazardIcon"
-        android:id="@+id/textViewRisk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="Risk:"
-        android:textColor="@color/gray_title"
-        android:textSize="13sp"/>
+        <ImageView
+            android:layout_below="@+id/txtHazardName"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/imgPopulationIcon"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            app:srcCompat="@drawable/bg_circle" />
 
-    <TextView
-        android:layout_below="@+id/textViewRisk"
-        android:layout_toRightOf="@+id/imgHazardIcon"
-        android:id="@+id/txtHazardName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="1dp"
-        android:text="Hazard Name"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        <TextView
+            android:layout_alignTop="@+id/imgPopulationIcon"
+            android:layout_toRightOf="@+id/imgPopulationIcon"
+            android:id="@+id/textViewPopulation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="Population affected:"
+            android:textColor="@color/gray_title"
+            android:textSize="13sp"/>
 
-    <ImageView
-        android:layout_below="@+id/txtHazardName"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/imgPopulationIcon"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/bg_circle" />
+        <TextView
+            android:layout_toRightOf="@+id/imgPopulationIcon"
+            android:layout_below="@+id/textViewPopulation"
+            android:id="@+id/txtPopulationAffected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="1dp"
+            android:text="100,000 people"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
-    <TextView
-        android:layout_alignTop="@+id/imgPopulationIcon"
-        android:layout_toRightOf="@+id/imgPopulationIcon"
-        android:id="@+id/textViewPopulation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="Population affected:"
-        android:textColor="@color/gray_title"
-        android:textSize="13sp"/>
+        <ImageView
+            android:layout_below="@+id/txtPopulationAffected"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/imgInfo"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewInfo"
+            app:srcCompat="@drawable/bg_circle" />
 
-    <TextView
-        android:layout_toRightOf="@+id/imgPopulationIcon"
-        android:layout_below="@+id/textViewPopulation"
-        android:id="@+id/txtPopulationAffected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="1dp"
-        android:text="100,000 people"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        <TextView
+            android:layout_toRightOf="@+id/imgInfo"
+            android:layout_alignTop="@+id/imgInfo"
+            android:id="@+id/textViewInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@string/info_and_notes"
+            android:textColor="@color/gray_title"
+            android:textSize="13sp"
+            app:layout_constraintStart_toEndOf="@+id/imgInfo"
+            app:layout_constraintTop_toBottomOf="@+id/txtArea" />
 
-    <ImageView
-        android:layout_below="@+id/txtPopulationAffected"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/imgInfo"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewInfo"
-        app:srcCompat="@drawable/bg_circle" />
+        <TextView
+            android:layout_below="@+id/textViewInfo"
+            android:layout_toRightOf="@+id/imgInfo"
+            android:id="@+id/txtInfo"
+            android:layout_width="275dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="1dp"
+            android:text="@string/text_info"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
-    <TextView
-        android:layout_toRightOf="@+id/imgInfo"
-        android:layout_alignTop="@+id/imgInfo"
-        android:id="@+id/textViewInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="@string/info_and_notes"
-        android:textColor="@color/gray_title"
-        android:textSize="13sp"
-        app:layout_constraintStart_toEndOf="@+id/imgInfo"
-        app:layout_constraintTop_toBottomOf="@+id/txtArea" />
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/txtInfo"
+            android:id="@+id/redAlertReasonIcon"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            app:srcCompat="@drawable/alert_red_reason" />
 
-    <TextView
-        android:layout_below="@+id/textViewInfo"
-        android:layout_toRightOf="@+id/imgInfo"
-        android:id="@+id/txtInfo"
-        android:layout_width="275dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="1dp"
-        android:text="@string/text_info"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        <TextView
+            android:layout_toRightOf="@+id/redAlertReasonIcon"
+            android:layout_alignTop="@+id/redAlertReasonIcon"
+            android:id="@+id/redAlertReason"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="Red alert reason:"
+            android:textColor="@color/gray_title"
+            android:textSize="13sp" />
 
-    <ImageView
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/txtInfo"
-        android:id="@+id/redAlertReasonIcon"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/alert_red_reason" />
+        <TextView
+            android:layout_toRightOf="@+id/redAlertReasonIcon"
+            android:layout_below="@+id/redAlertReason"
+            android:id="@+id/redAlertReasonTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin_half"
+            android:lineSpacingMultiplier="1.6"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
-    <TextView
-        android:layout_toRightOf="@+id/redAlertReasonIcon"
-        android:layout_alignTop="@+id/redAlertReasonIcon"
-        android:id="@+id/redAlertReason"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="Red alert reason:"
-        android:textColor="@color/gray_title"
-        android:textSize="13sp" />
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/redAlertReason"
+            android:id="@+id/imgAreaIcon"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="42dp"
+            app:srcCompat="@drawable/bg_circle" />
 
-    <TextView
-        android:layout_toRightOf="@+id/redAlertReasonIcon"
-        android:layout_below="@+id/redAlertReason"
-        android:id="@+id/redAlertReasonTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin_half"
-        android:lineSpacingMultiplier="1.6"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        <TextView
+            android:layout_toRightOf="@+id/imgAreaIcon"
+            android:layout_alignTop="@+id/imgAreaIcon"
+            android:id="@+id/textViewAreas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="Affected areas:"
+            android:textColor="@color/gray_title"
+            android:textSize="13sp"
+            app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
+            app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected" />
 
-    <ImageView
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/redAlertReason"
-        android:id="@+id/imgAreaIcon"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
-        app:srcCompat="@drawable/bg_circle" />
+        <TextView
+            android:layout_toRightOf="@+id/imgAreaIcon"
+            android:layout_below="@+id/textViewAreas"
+            android:id="@+id/txtArea"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin_half"
+            android:lineSpacingMultiplier="1.6"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAreas" />
 
-    <TextView
-        android:layout_toRightOf="@+id/imgAreaIcon"
-        android:layout_alignTop="@+id/imgAreaIcon"
-        android:id="@+id/textViewAreas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="Affected areas:"
-        android:textColor="@color/gray_title"
-        android:textSize="13sp"
-        app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-        app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected" />
-
-    <TextView
-        android:layout_toRightOf="@+id/imgAreaIcon"
-        android:layout_below="@+id/textViewAreas"
-        android:id="@+id/txtArea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin_half"
-        android:lineSpacingMultiplier="1.6"
-        android:textColor="@android:color/black"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAreas" />
-
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:id="@+id/txtLastUpdated"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:text="@string/last_updated"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
-
-</RelativeLayout>
+        <TextView
+            android:layout_below="@+id/txtArea"
+            android:id="@+id/txtLastUpdated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:text="@string/last_updated"
+            android:textColor="@android:color/black"/>
+    </RelativeLayout>
+</ScrollView>
