--- a/Alert/app/src/main/res/layout/content_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/content_alert_detail.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:layout_alignParentLeft="true"
             android:id="@+id/imgHazardIcon"
@@ -157,13 +158,13 @@
 
         <ImageView
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/redAlertReason"
+            android:layout_below="@+id/redAlertReasonTxt"
             android:id="@+id/imgAreaIcon"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             app:srcCompat="@drawable/bg_circle" />
 
         <TextView
@@ -195,16 +196,16 @@
             app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
             app:layout_constraintTop_toBottomOf="@+id/textViewAreas" />
 
-        <TextView
-            android:layout_below="@+id/txtArea"
-            android:id="@+id/txtLastUpdated"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:gravity="center"
-            android:text="@string/last_updated"
-            android:textColor="@android:color/black"/>
+        <!--<TextView-->
+            <!--android:layout_below="@+id/txtArea"-->
+            <!--android:id="@+id/txtLastUpdated"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="16dp"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/last_updated"-->
+            <!--android:textColor="@android:color/black"/>-->
     </RelativeLayout>
 </ScrollView>
