--- a/Alert/app/src/main/res/values/styles.xml
+++ b/Alert/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 </resources>
