--- a/Alert/app/src/main/res/layout/item_task.xml
+++ b/Alert/app/src/main/res/layout/item_task.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
     <ImageView
-        android:id="@+id/ivTask"
+        android:id="@+id/ivIcon"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginStart="24dp"
@@ -28,7 +28,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tvDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ivTask"
+        app:layout_constraintStart_toEndOf="@+id/ivIcon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Title"/>
 
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ivTask"
+        app:layout_constraintStart_toEndOf="@+id/ivIcon"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle"
         tools:text="Content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
