UI work and base fragment work for preparedness screens

--- a/Alert/app/src/main/res/layout/content_minimum.xml
+++ b/Alert/app/src/main/res/layout/content_minimum.xml
@@ -3,7 +3,7 @@
     android:id="@+id/cl_in_progress"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/divider_color">
+    android:background="@color/grey">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
