--- a/Alert/app/src/main/res/layout/content_add_indicator.xml
+++ b/Alert/app/src/main/res/layout/content_add_indicator.xml
@@ -32,7 +32,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/tvAddIndicatorName"
@@ -51,7 +51,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSources"
@@ -71,7 +71,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,7 +105,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                    android:background="@color/grey" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -128,7 +128,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/etIndicatorGreenValue"
@@ -149,7 +149,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <TextView
                         android:id="@+id/tvGreenFrequency"
@@ -173,7 +173,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -207,7 +207,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                    android:background="@color/grey" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -230,7 +230,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/etIndicatorAmberValue"
@@ -251,7 +251,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <TextView
                         android:id="@+id/tvAmberFrequency"
@@ -275,7 +275,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -309,7 +309,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                    android:background="@color/grey" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -332,7 +332,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/etIndicatorRedValue"
@@ -353,7 +353,7 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                        android:background="@color/grey" />
 
                     <TextView
                         android:id="@+id/tvRedFrequency"
@@ -377,7 +377,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <TextView
             android:id="@+id/tvAssignTo"
@@ -393,7 +393,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <LinearLayout
             android:id="@+id/llIndicatorSelectLocation"
@@ -440,7 +440,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvLocationSubNational"
