--- a/Alert/app/src/main/res/layout/content_advanced.xml
+++ b/Alert/app/src/main/res/layout/content_advanced.xml
@@ -1,10 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/cl_in_progress"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/divider_color">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_in_progress"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey">
 
 
 <androidx.cardview.widget.CardView
