--- a/Alert/app/src/main/res/layout/content_select_area.xml
+++ b/Alert/app/src/main/res/layout/content_select_area.xml
@@ -39,7 +39,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_color"/>
+        android:background="@color/grey" />
 
     <LinearLayout
         android:id="@+id/llAreaLevel1"
@@ -70,7 +70,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_color"/>
+        android:background="@color/grey" />
 
     <LinearLayout
         android:id="@+id/llAreaLevel2"
@@ -101,6 +101,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_color"/>
+        android:background="@color/grey" />
 
 </LinearLayout>
