--- a/Alert/app/src/main/res/layout/dialog_alert_type.xml
+++ b/Alert/app/src/main/res/layout/dialog_alert_type.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_marginLeft="@dimen/activity_vertical_margin_half"
+<LinearLayout android:layout_marginLeft="@dimen/activity_vertical_margin_half"
     android:layout_marginRight="@dimen/activity_vertical_margin_half"
     android:padding="@dimen/activity_vertical_margin"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -37,7 +35,7 @@
     <View
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:background="@color/divider_color"
+        android:background="@color/grey"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
@@ -68,7 +66,7 @@
     <View
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:background="@color/divider_color"
+        android:background="@color/grey"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
