--- a/Alert/app/src/main/res/layout/fragment_home_old.xml
+++ b/Alert/app/src/main/res/layout/fragment_home_old.xml
@@ -64,7 +64,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/divider_color"/>
+                android:background="@color/grey" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -177,7 +177,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
     </androidx.cardview.widget.CardView>
 
 
