--- a/Alert/app/src/main/res/layout/fragment_settings.xml
+++ b/Alert/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,7 +27,7 @@
         android:layout_below="@+id/btnChangeEmail"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_color"/>
+        android:background="@color/grey" />
 
     <Button
         android:layout_below="@+id/emailBorder"
@@ -51,7 +50,7 @@
         android:layout_below="@+id/btnChangePassword"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_color"/>
+        android:background="@color/grey" />
 
     <Button
         android:id="@+id/btnLogout"
