--- a/Alert/app/src/main/res/layout/item_create_alert_list_field.xml
+++ b/Alert/app/src/main/res/layout/item_create_alert_list_field.xml
@@ -61,7 +61,7 @@
     </LinearLayout>
 
     <View
-        android:background="@color/divider_color"
+        android:background="@color/grey"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
