--- a/Alert/app/src/main/res/layout/item_hazard.xml
+++ b/Alert/app/src/main/res/layout/item_hazard.xml
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <View
-        android:background="@color/divider_color"
+        android:background="@color/grey"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
