--- a/Alert/app/src/main/res/layout/item_multi_hazard_header.xml
+++ b/Alert/app/src/main/res/layout/item_multi_hazard_header.xml
@@ -37,7 +37,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/divider_color"
+        android:background="@color/grey"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
