--- a/Alert/app/src/main/res/layout/my_tasks_list.xml
+++ b/Alert/app/src/main/res/layout/my_tasks_list.xml
@@ -1,6 +1,4 @@
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nsScrollView"
     android:layout_width="match_parent"
@@ -23,7 +21,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/divider_color"/>
+            android:background="@color/grey" />
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
