--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="page_indicator_color">#006EA0</color>
     <color name="grey_title">#66000000</color>
     <color name="gray_title">#7A7A7A</color>
-    <color name="divider_color">#eaeaea</color>
+    <color name="grey">#eaeaea</color>
     <color name="divider_color_lighter">#ededed</color>
     <color name="remove_button">#E10514</color>
     <color name="hazard_tab_color">#F3F3F3</color>
