--- a/Alert/app/src/main/res/drawable/ic_chat_bubble_24px.xml
+++ b/Alert/app/src/main/res/drawable/ic_chat_bubble_24px.xml
@@ -6,5 +6,5 @@
     android:height="24dp">
     <path
         android:pathData="M20 2L4 2C2.9 2 2 2.9 2 4l0 18 4 -4 14 0c1.1 0 2 -0.9 2 -2L22 4C22 2.9 21.1 2 20 2Z"
-        android:fillColor="@color/alertGray" />
+        android:fillColor="@color/alertGrey" />
 </vector>
