--- a/Alert/app/src/main/res/drawable/ic_provider.xml
+++ b/Alert/app/src/main/res/drawable/ic_provider.xml
@@ -6,5 +6,5 @@
     android:height="24dp">
     <path
         android:pathData="M10 4L4 4C2.9 4 2.01 4.9 2.01 6L2 18c0 1.1 0.9 2 2 2l16 0c1.1 0 2 -0.9 2 -2L22 8C22 6.9 21.1 6 20 6L12 6 10 4Z"
-        android:fillColor="@color/alertGray" />
+        android:fillColor="@color/alertGrey" />
 </vector>
