--- a/Alert/app/src/main/res/drawable/ic_videocam_24px.xml
+++ b/Alert/app/src/main/res/drawable/ic_videocam_24px.xml
@@ -6,5 +6,5 @@
     android:height="24dp">
     <path
         android:pathData="M17 10.5L17 7C17 6.45 16.55 6 16 6L4 6C3.45 6 3 6.45 3 7l0 10c0 0.55 0.45 1 1 1l12 0c0.55 0 1 -0.45 1 -1l0 -3.5 4 4 0 -11 -4 4z"
-        android:fillColor="@color/alertGray" />
+        android:fillColor="@color/alertGrey" />
 </vector>
