--- a/Alert/app/src/main/res/layout/fragment_page_preparedness.xml
+++ b/Alert/app/src/main/res/layout/fragment_page_preparedness.xml
@@ -15,7 +15,10 @@
         android:layout_marginTop="16dp"
         android:background="@color/grey"
         app:cardCornerRadius="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -66,6 +69,7 @@
                 app:layout_constraintTop_toBottomOf="@id/vDivider"
                 tools:itemCount="3"
                 tools:listitem="@layout/item_preparedness_action"
+                app:layout_constrainedHeight="true"
                 tools:visibility="visible" />
 
             <TextView
@@ -73,7 +77,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="8dp"
+                android:padding="12dp"
                 android:text="@string/no_actions"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
