--- a/Alert/app/src/main/res/menu/menu_archived.xml
+++ b/Alert/app/src/main/res/menu/menu_archived.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/edit"
-            android:icon="@drawable/ic_edit_gray_24px"
+            android:icon="@drawable/action_edit"
             android:title="@string/edit" />
         <!--<item-->
             <!--android:id="@+id/reactive_action"-->
@@ -12,11 +12,11 @@
             <!--android:title="@string/txt_complete_action" />-->
         <item
             android:id="@+id/action_notes"
-            android:icon="@drawable/ic_chat_bubble_24px"
-            android:title="@string/txt_action_notes" />
+            android:icon="@drawable/notes_action"
+            android:title="@string/notes_action" />
         <item
             android:id="@+id/attachments"
-            android:icon="@drawable/ic_attach_file_24px"
+            android:icon="@drawable/attach_action"
             android:title="@string/txt_attachments" />
     </group>
 </menu>
