--- a/Alert/app/src/main/res/menu/menu_archived_mpa.xml
+++ b/Alert/app/src/main/res/menu/menu_archived_mpa.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/action_notes"
-            android:icon="@drawable/ic_chat_bubble_24px"
-            android:title="@string/txt_action_notes" />
+            android:icon="@drawable/notes_action"
+            android:title="@string/notes_action" />
         <item
             android:id="@+id/attachments"
-            android:icon="@drawable/ic_attach_file_24px"
+            android:icon="@drawable/attach_action"
             android:title="@string/txt_attachments" />
     </group>
 </menu>
