--- a/Alert/app/src/main/res/menu/menu_expired_mpa.xml
+++ b/Alert/app/src/main/res/menu/menu_expired_mpa.xml
@@ -3,19 +3,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/update_date"
-            android:icon="@drawable/ic_date_24px"
-            android:title="@string/txt_update_due_date" />
+            android:icon="@drawable/update_due_date_action"
+            android:title="@string/update_due_date_action" />
         <item
             android:id="@+id/reassign_action"
-            android:icon="@drawable/ic_assignment_24px"
-            android:title="@string/txt_reassign_action" />
+            android:icon="@drawable/assign_action"
+            android:title="@string/reassign_action" />
         <item
             android:id="@+id/action_notes"
-            android:icon="@drawable/ic_chat_bubble_24px"
-            android:title="@string/txt_action_notes" />
+            android:icon="@drawable/notes_action"
+            android:title="@string/notes_action" />
         <item
             android:id="@+id/attachments"
-            android:icon="@drawable/ic_attach_file_24px"
+            android:icon="@drawable/attach_action"
             android:title="@string/txt_attachments" />
     </group>
 </menu>
