--- a/Alert/app/src/main/res/menu/menu_unassigned_apa.xml
+++ b/Alert/app/src/main/res/menu/menu_unassigned_apa.xml
@@ -3,11 +3,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/edit_action"
-            android:icon="@drawable/ic_edit_gray_24px"
-            android:title="@string/txt_edit_action" />
+            android:icon="@drawable/action_edit"
+            android:title="@string/action_edit" />
         <item
             android:id="@+id/assign_action"
-            android:icon="@drawable/ic_assignment_24px"
-            android:title="@string/txt_assign_action" />
+            android:icon="@drawable/assign_action"
+            android:title="@string/assign_action" />
     </group>
 </menu>
