--- a/Alert/app/src/main/res/layout/item_attachment.xml
+++ b/Alert/app/src/main/res/layout/item_attachment.xml
@@ -9,7 +9,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin_one_and_a_half"
         android:layout_marginLeft="@dimen/activity_horizontal_margin_one_and_a_half"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:id="@+id/title"
+        android:id="@+id/tvTitle"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
