--- a/Alert/app/src/main/res/layout/item_filter.xml
+++ b/Alert/app/src/main/res/layout/item_filter.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
-        android:id="@+id/title"
+        android:id="@+id/tvTitle"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
