--- a/Alert/app/src/main/res/layout/item_group.xml
+++ b/Alert/app/src/main/res/layout/item_group.xml
@@ -7,8 +7,8 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/civHazard"
+        <ImageView
+            android:id="@+id/ivIcon"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="center"
@@ -17,7 +17,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/tvHazardName"
+            android:id="@+id/tvGroupTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
