--- a/Alert/app/src/main/res/layout/item_programme.xml
+++ b/Alert/app/src/main/res/layout/item_programme.xml
@@ -9,7 +9,7 @@
     <TextView
         android:textColor="@color/grey_title"
         android:layout_marginBottom="6dp"
-        android:id="@+id/title"
+        android:id="@+id/tvTitle"
         android:textStyle="bold"
         android:textSize="14dp"
         tools:text="Shelter, Health"
@@ -19,7 +19,7 @@
     <TextView
         android:textColor="@android:color/black"
         android:layout_marginBottom="10dp"
-        android:id="@+id/desc"
+        android:id="@+id/tvDesc"
         android:textStyle="normal"
         android:textSize="14dp"
         tools:text="Mobile Medical Support to Flood Affected Families"
@@ -31,7 +31,7 @@
         android:layout_marginBottom="4dp"
         android:textColor="@color/light_blue"
         tools:text="To: Flood Affected families who have no access to medical facilities"
-        android:id="@+id/to"
+        android:id="@+id/tvTo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -40,7 +40,7 @@
         android:layout_marginBottom="10dp"
         android:textColor="@color/light_blue"
         tools:text="In: Philippines, Laguna"
-        android:id="@+id/in"
+        android:id="@+id/tvIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -48,7 +48,7 @@
         android:layout_marginBottom="4dp"
         tools:text="From: 28/05/12 - 05/11/18"
         android:textColor="@color/hintGray"
-        android:id="@+id/from"
+        android:id="@+id/tvFrom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
