--- a/Alert/app/src/main/res/layout/activity_complete_action.xml
+++ b/Alert/app/src/main/res/layout/activity_complete_action.xml
@@ -77,7 +77,7 @@
                 android:layout_width="@dimen/space_275"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_size"
-                android:text="@string/txt_add_attachments" />
+                android:text="@string/tvNumOfPeople" />
 
         </LinearLayout>
 
