--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,13 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:background="@color/grey"
+            android:clipToPadding="false"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_alert" />
 
         <TextView
             android:id="@+id/tvMyTasks"
