--- a/Alert/app/src/main/res/layout/item_programme.xml
+++ b/Alert/app/src/main/res/layout/item_programme.xml
@@ -11,7 +11,7 @@
         android:layout_marginBottom="6dp"
         android:id="@+id/tvTitle"
         android:textStyle="bold"
-        android:textSize="14dp"
+        android:textSize="14sp"
         tools:text="Shelter, Health"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -21,13 +21,13 @@
         android:layout_marginBottom="10dp"
         android:id="@+id/tvDesc"
         android:textStyle="normal"
-        android:textSize="14dp"
+        android:textSize="14sp"
         tools:text="Mobile Medical Support to Flood Affected Families"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:layout_marginBottom="4dp"
         android:textColor="@color/light_blue"
         tools:text="To: Flood Affected families who have no access to medical facilities"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:layout_marginBottom="10dp"
         android:textColor="@color/light_blue"
         tools:text="In: Philippines, Laguna"
