--- a/Alert/app/src/main/res/layout/item_group.xml
+++ b/Alert/app/src/main/res/layout/item_group.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/llHazard"
+    android:id="@+id/llGroup"
               android:background="@color/hazard_tab_color"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
